# joltc

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build.yml
include/: joltc.h
samples/: CMakeLists.txt
samples/01_HelloWorld/: main.c  main.cpp
src/: joltc.cpp  joltc_assert.cpp
tests/: CMakeLists.txt  test_character.cpp  test_collision.cpp  test_constraints.cpp  test_core.cpp  test_math.cpp  test_physics_system.cpp  test_shapes.cpp  test_skeleton.cpp  test_vehicle.cpp
